add java 17 options